--- a/packages/happy-cli/package.json
+++ b/packages/happy-cli/package.json
@@ -95,7 +95,7 @@
     "@types/http-proxy": "^1.17.17",
     "@types/ps-list": "^6.2.1",
     "@types/qrcode-terminal": "^0.12.2",
-    "@types/react": "^19.2.7",
+    "@types/react": "19.1.0",
     "@types/tmp": "^0.2.6",
     "ai": "^5.0.107",
     "axios": "^1.13.2",
@@ -106,11 +106,11 @@
     "fastify-type-provider-zod": "4.0.2",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.5",
-    "ink": "^6.5.1",
+    "ink": "6.4.0",
     "open": "^10.2.0",
     "ps-list": "^8.1.1",
     "qrcode-terminal": "^0.12.0",
-    "react": "^19.2.0",
+    "react": "19.1.0",
     "socket.io-client": "^4.8.1",
     "tar": "^7.5.2",
     "tmp": "^0.2.5",
@@ -135,7 +135,8 @@
   "resolutions": {
     "whatwg-url": "14.2.0",
     "parse-path": "7.0.3",
-    "@types/parse-path": "7.0.3"
+    "@types/parse-path": "7.0.3",
+    "react": "19.1.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
